// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Validate Action > check all '**' 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
]
`;

exports[`Validate Action > check all '**/*.md' 1`] = `[]`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "''" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "''" 2`] = `[]`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "''" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 5, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::5
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":5,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "''" 4`] = `
[
  "Pull Request",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 5, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::5",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":5,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 5, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::5
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":5,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 4`] = `
[
  "Pull Request",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 5, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::5",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":5,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'true'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'true'" 2`] = `[]`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'true'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 5, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::5
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":5,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'true'" 4`] = `
[
  "Pull Request",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 5, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::5",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":5,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files "''" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "''" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "''" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 3`] = `
[
  [
    "::warning::Unable to determine which files have changed, checking files: **
",
  ],
  [
    "'fork'
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 5, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::5
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":5,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
  [
    "::error::4 spelling issues found in 1 of the 5 files checked.
",
  ],
]
`;

exports[`Validate Action > check files "''" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 4`] = `
[
  "::warning::Unable to determine which files have changed, checking files: **",
  "'fork'",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 5, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::5",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":5,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
  "::error::4 spelling issues found in 1 of the 5 files checked.",
]
`;

exports[`Validate Action > check files "'**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "'**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "'**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 3`] = `
[
  [
    "::warning::Unable to determine which files have changed, checking files: **
",
  ],
  [
    "'fork'
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 5, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::5
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":5,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
  [
    "::error::4 spelling issues found in 1 of the 5 files checked.
",
  ],
]
`;

exports[`Validate Action > check files "'**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 4`] = `
[
  "::warning::Unable to determine which files have changed, checking files: **",
  "'fork'",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 5, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::5",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":5,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
  "::error::4 spelling issues found in 1 of the 5 files checked.",
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 4, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":4,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 4`] = `
[
  "Pull Request",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 4, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":4,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: true 'pull_request_with_files.json', dot: "'explicit'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon) Suggestions: (functor, function, Function, futon, fulton)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt) Suggestions: (count, Count, counts, county, cont)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)",
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: true 'pull_request_with_files.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: true 'pull_request_with_files.json', dot: "'explicit'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon) Suggestions: (functor, function, Function, futon, fulton)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt) Suggestions: (count, Count, counts, county, cont)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)
",
  ],
  [
    "Files checked: 4, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":4,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: true 'pull_request_with_files.json', dot: "'explicit'" 4`] = `
[
  "Pull Request",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon) Suggestions: (functor, function, Function, futon, fulton)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt) Suggestions: (count, Count, counts, county, cont)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)",
  "Files checked: 4, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":4,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 3`] = `
[
  [
    "::warning::Unable to determine which files have changed, checking files: sampleCode/**
",
  ],
  [
    "'fork'
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 4, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":4,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
  [
    "::error::4 spelling issues found in 1 of the 4 files checked.
",
  ],
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 4`] = `
[
  "::warning::Unable to determine which files have changed, checking files: sampleCode/**",
  "'fork'",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 4, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":4,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
  "::error::4 spelling issues found in 1 of the 4 files checked.",
]
`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" incremental: false sugs: true 'pull_request_with_files.json', dot: "'explicit'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon) Suggestions: (functor, function, Function, futon, fulton)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt) Suggestions: (count, Count, counts, county, cont)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)",
]
`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" incremental: false sugs: true 'pull_request_with_files.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" incremental: false sugs: true 'pull_request_with_files.json', dot: "'explicit'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon) Suggestions: (functor, function, Function, futon, fulton)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt) Suggestions: (count, Count, counts, county, cont)
",
  ],
  [
    "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)
",
  ],
  [
    "Files checked: 4, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":4,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" incremental: false sugs: true 'pull_request_with_files.json', dot: "'explicit'" 4`] = `
[
  "Pull Request",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon) Suggestions: (functor, function, Function, futon, fulton)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt) Suggestions: (count, Count, counts, county, cont)",
  "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)",
  "Files checked: 4, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":4,"number_of_files_checked":4,"files_with_issues":["fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;
